Sticky conflit with the overflow hidden correction

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 body {
